add_executable(test_client_close test_client_close.cpp)
target_link_libraries(test_client_close wallenet wallesys)

#add_executable(test_loop test_loop.cpp)
#target_link_libraries(test_loop wallenet wallesys)

#add_executable(test_signal test_signal.cpp)
#target_link_libraries(test_signal wallenet wallesys)